# http-server-gtest

./: CMakeLists.txt
include/: Fact.h  FileHandler.h  Logger.h  Server.h
src/: FileHandler.cpp  Logger.cpp  Server.cpp  main.cpp
test/: test_fact.cpp  test_file_handler.cpp  test_log.cpp
